@@ -431,6 +431,37 @@
         }
     }
 
+    public class sdf : StandardKernelContext
+    {
+        [Fact]
+        public void RemovesAllBindingsForServiceAndReplacesWithSpecifiedBinding()
+        {
+            kernel.Bind<IWeapon>().To<Shuriken>().When(r => r.ParentRequest.Service.GetGenericArguments()[0] == typeof(string));
+            kernel.Bind<IWeapon>().To<Sword>().When(r => r.ParentRequest.Service.GetGenericArguments()[0] == typeof(int));
+            kernel.Bind(typeof(IRepository<>)).To(typeof(Repository<>));
+
+            var repo = kernel.Get<IRepository<int>>();
+
+            repo.Weapon.Should().BeOfType<Sword>();
+        }
+
+        public interface IRepository<T>
+        {
+            IWeapon Weapon { get; }
+        }
+
+        public class Repository<T> : IRepository<T>
+        {
+            public Repository(IWeapon weapon)
+            {
+                this.Weapon = weapon;
+            }
+
+            public IWeapon Weapon { get; private set; }
+        }
+    }
+    
+    
     public class WhenCanResolveIsCalled : StandardKernelContext
     {
         [Fact]
